# rag-learning

./: .gitignore  .pre-commit-config.yaml  README.md  helpers.py  main.py  pyproject.toml  text.py  tokenizer.py  vector.py  vector_store.py
.github/workflows/: ci.yml
bench/: benchmark_performance.py
brainfs/: __init__.py  cli.py  database.py  exceptions.py  llm.py  parsers.py  text.py  tokenizer.py  vector.py  vector_store.py
test_docs/: another.txt  sample.md
tests/: __init__.py  conftest.py  test_cli.py  test_database.py  test_integration.py  test_parsers.py  test_text.py  test_tokenizer.py  test_vector.py  test_vector_store.py
