[project]
name = "ai-vector-search"
version = "0.1.0"
description = "A Python vector search and RAG system"
authors = [
    { name = "Eliaz Bobadilla", email = "your-email@example.com" }
]
dependencies = []
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "ty>=0.0.11",
    "pre-commit>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ty]

[dependency-groups]
dev = [
    "ruff>=0.1.0",
    "ty>=0.0.11",
    "pre-commit>=3.0.0",
]