[project]
name = "brainfs"
version = "0.1.0"
description = "A CLI tool for document indexing and querying using vector search"
authors = [
    { name = "Eliaz Bobadilla", email = "your-email@example.com" }
]
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "pypdf>=3.0.0",
    "python-docx>=1.1.0",
    "markdown>=3.5.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "nltk>=3.8.0",
]
requires-python = ">=3.9"

[project.scripts]
brainfs = "brainfs.cli:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "ty>=0.0.11",
    "pre-commit>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ty]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--cov=brainfs",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--strict-markers",
    "--strict-config",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["brainfs"]
omit = [
    "tests/*",
    "*/conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"

[dependency-groups]
dev = [
    "ruff>=0.1.0",
    "ty>=0.0.11",
    "pre-commit>=3.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]